// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Stack] navigator should renders [Dark] mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#2C2C2C",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#2C2C2C",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "flex-start",
                              "alignSelf": "stretch",
                              "backgroundColor": "#2C2C2C",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "flexWrap": "wrap",
                                "justifyContent": "center",
                                "paddingBottom": 0,
                                "paddingLeft": 24,
                                "paddingRight": 24,
                                "paddingTop": 0,
                                "width": "100%",
                              },
                            ]
                          }
                        >
                          <Image
                            source={
                              Object {
                                "canInstrument": true,
                                "createTransformer": [Function],
                                "getCacheKey": [Function],
                                "process": [Function],
                              }
                            }
                            style={
                              Array [
                                Object {
                                  "height": 66.54,
                                  "marginTop": 8,
                                  "width": 180,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[Function]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 18,
                                      "fontWeight": "500",
                                      "paddingBottom": 20,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 20,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Story
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[Function]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 18,
                                      "fontWeight": "500",
                                      "paddingBottom": 20,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 20,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Work
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[Function]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 18,
                                      "fontWeight": "500",
                                      "paddingBottom": 20,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 20,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Contact
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "position": "absolute",
                                  "right": 20,
                                  "top": 20,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <View
                                activeOpacity={0.8}
                                onPress={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#D3D8E8",
                                      "borderRadius": 20,
                                      "justifyContent": "center",
                                      "padding": 12,
                                      "width": 46,
                                    },
                                    Object {},
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "white",
                                      "borderRadius": 9,
                                      "elevation": 1.5,
                                      "height": 18,
                                      "justifyContent": "center",
                                      "left": 0,
                                      "margin": 4,
                                      "position": "absolute",
                                      "shadowColor": "#000",
                                      "shadowOffset": Object {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 0.2,
                                      "shadowRadius": 2.5,
                                      "transform": Array [
                                        Object {
                                          "translateX": 0,
                                        },
                                      ],
                                      "width": 18,
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#D3D8E8",
                              },
                            ]
                          }
                        >
                          Main
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`[Stack] navigator should renders without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "flex-start",
                              "alignSelf": "stretch",
                              "backgroundColor": "#FFFFFF",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "flexWrap": "wrap",
                                "justifyContent": "center",
                                "paddingBottom": 0,
                                "paddingLeft": 24,
                                "paddingRight": 24,
                                "paddingTop": 0,
                                "width": "100%",
                              },
                            ]
                          }
                        >
                          <Image
                            source={
                              Object {
                                "canInstrument": true,
                                "createTransformer": [Function],
                                "getCacheKey": [Function],
                                "process": [Function],
                              }
                            }
                            style={
                              Array [
                                Object {
                                  "height": 66.54,
                                  "marginTop": 8,
                                  "width": 180,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[Function]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 18,
                                      "fontWeight": "500",
                                      "paddingBottom": 20,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 20,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Story
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[Function]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 18,
                                      "fontWeight": "500",
                                      "paddingBottom": 20,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 20,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Work
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[Function]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 18,
                                      "fontWeight": "500",
                                      "paddingBottom": 20,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 20,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Contact
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "position": "absolute",
                                  "right": 20,
                                  "top": 20,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <View
                                activeOpacity={0.8}
                                onPress={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#ecf0f1",
                                      "borderRadius": 20,
                                      "justifyContent": "center",
                                      "padding": 12,
                                      "width": 46,
                                    },
                                    Object {},
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "white",
                                      "borderRadius": 9,
                                      "elevation": 1.5,
                                      "height": 18,
                                      "justifyContent": "center",
                                      "left": 0,
                                      "margin": 4,
                                      "position": "absolute",
                                      "shadowColor": "#000",
                                      "shadowOffset": Object {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 0.2,
                                      "shadowRadius": 2.5,
                                      "transform": Array [
                                        Object {
                                          "translateX": 0,
                                        },
                                      ],
                                      "width": 18,
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#000000",
                              },
                            ]
                          }
                        >
                          Main
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;
